# AVR

./: .editorconfig  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
code/: README_code.md  index.html
code/AVR/: __init__.py  configs.py  cpa.py  cpa_averaged.py  cpa_old.py  main.py  template.py
code/AVR/datacomparison/: 02_summary_stats.py  README.md  compare_variability_phase1+2.py  compare_variability_phase1_phase2.py  compare_variability_phase1_phase3.py
code/AVR/datavisualization/: plot_descriptives.py  plot_hidden_states.py  plot_image.py  radar_plot.py  raincloud_plot.py
code/AVR/modelling/: compare_models.py  glm.py  hmm.py  hmm_stats.py
code/AVR/preprocessing/: freesurfer.py  read_xdf.py
code/AVR/preprocessing/annotation/: preprocessing_annotation_avr_phase1.py  preprocessing_annotation_avr_phase2+3.py  preprocessing_annotation_avr_phase2.py  preprocessing_annotation_avr_phase3.py  preprocessing_annotation_case.py  preprocessing_annotation_ceap.py  preprocessing_annotation_nevro.py  preprocessing_physiological_case.py  preprocessing_physiological_ceap.py  visual_check.py
code/AVR/preprocessing/physiological/: bad_after_cleaning_check.py  feature_extraction.py  nvr_ecg_functions_new.py  nvr_eeg_all.py  nvr_eeg_functions_new.py  preprocessing_metadata.py  preprocessing_physiological_avr_phase3.py  preprocessing_physiological_nevro.py  read_xdf.py  sub-pilot002_ses-S001_task-AVRmov_run-001_eeg.edf
code/AVR/statistics/: descriptive_statistics.py  glm.py  hmm_stats.py  univariate_statistics.py
code/CPA/: cpa.py  cpa_averaged.py
code/Rscripts/: AVR.R
code/Rscripts/phase1/: README.md  assessment_others.R  corr_cr_sr.R  cr_plot.R  invasiveness.R  util.R
code/configs/: config.toml
code/notebooks/: AVR.ipynb
code/other_datasets/CASE/: 01_preprocessing.py  02_summary_stats.py  03_plots_ceap_affectivevr.py  preprocessing_annotation_case.py  preprocessing_physiological_case.py
code/other_datasets/CEAP/: preprocessing_annotation_ceap.py  preprocessing_physiological_ceap.py
code/other_datasets/NeVRo/: preprocessing_annotation_nevro.py  preprocessing_physiological_nevro.py  preprocessing_physiological_nevro_antonin.py
code/tests/: __init__.py  test_AVR.py
docs/: code.md  publications.md  results.md
literature/: AVR.bib  PUBLICATION_1.bib  PUBLICATION_2.bib
publications/: README_publications.md  index.html
results/: README_results.md  index.html
results/CASE/cpa/: cpa_case.aux
results/CASE/cpa/all/: changepoint_data_model=l2_jump=5.csv  summary_statistics_model=l2_jump=5.csv
results/CASE/cpa/avg/: changepoint_data_model=l2_jump=5_avg.csv
results/CASE/cpa/old/: cpa_case.out  cpa_case.tex
results/CASE/cpa/sub_1/: sub_1_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_10/: sub_10_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_11/: sub_11_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_12/: sub_12_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_13/: sub_13_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_14/: sub_14_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_15/: sub_15_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_16/: sub_16_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_17/: sub_17_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_18/: sub_18_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_19/: sub_19_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_2/: sub_2_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_20/: sub_20_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_21/: sub_21_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_22/: sub_22_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_23/: sub_23_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_24/: sub_24_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_25/: sub_25_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_26/: sub_26_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_27/: sub_27_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_28/: sub_28_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_29/: sub_29_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_3/: sub_3_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_30/: sub_30_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_4/: sub_4_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_5/: sub_5_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_6/: sub_6_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_7/: sub_7_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_8/: sub_8_changepoint_data_model=l2_jump=5.csv
results/CASE/cpa/sub_9/: sub_9_changepoint_data_model=l2_jump=5.csv
results/CEAP/descriptives/: cr_ceap_all_timepoints_average.csv  cr_ceap_descriptive.csv  cr_ceap_descriptive_avgvideos.csv  cr_ceap_descriptive_avgvideos_individual.csv  cr_ceap_descriptive_individual.csv
results/comparison_phase1_phase2/: homogeneity_test.tsv  manova_results.tsv  normality_test.tsv  posthoc_results.tsv
results/comparison_phase1_phase3/: anova_results.tsv  homogeneity_test.tsv  homoscedasticity_test.tsv  manova_results.tsv  normality_test.tsv  posthoc_results.tsv
results/phase1/: .Post_experiment_qualitative_results.pptx.icloud  Post_experiment_qualitative_results.pptx
results/phase1/assessment_results/SUS/: TOST_sus.csv  (+1 more)
results/phase1/cocor_results/: summary_cocor_cor_results.csv
results/phase1/cor_results/: min_max_cor.csv  summary_cor_results.csv
results/phase1/cr_plots/: .valence_arousal.png.icloud  cr_descriptive_summary.csv
results/phase1/descriptives/: cr_affectivevr_all_timepoints_average.csv  cr_affectivevr_descriptive.csv  cr_affectivevr_descriptive_avgvideos.csv  cr_affectivevr_descriptive_avgvideos_individual.csv  cr_affectivevr_descriptive_individual.csv
results/phase1/icc_results/: cr_icc_results.txt  sr_icc_results.txt
search/: search_index.json
(+1045 files in other folders)
